# arxiv-agent

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: daily-paper-summary.yml  daily_run.yml
.takt/: persona_sessions.json  session-state.json  tasks.yaml
config/: default.yaml
src/: __init__.py  collector.py  config.py  main.py  models.py  notifier.py  summarizer.py
src/arxiv_agent/: __init__.py  main.py
src/arxiv_agent/collection/: __init__.py  arxiv_client.py  models.py
src/arxiv_agent/config/: loader.py  models.py
src/arxiv_agent/history/: __init__.py  paper_history.py
src/arxiv_agent/notification/: base_webhook_notifier.py  discord.py  notifier.py  slack.py
src/arxiv_agent/summarization/: __init__.py  gemini_client.py  models.py  prompt_builder.py
src/arxiv_agent/utils/: logger.py
tests/: test_arxiv_agent_main.py  test_arxiv_client.py  test_base_webhook_notifier.py  test_collector.py  test_config.py  test_config_loader.py  test_discord.py  test_gemini_client.py  test_logger.py  test_main.py  test_models.py  test_notifier.py  test_paper_history.py  test_prompt_builder.py  test_slack.py  test_summarizer.py
work/github.com/ac2393921/arxiv-agent/: requirements.txt
work/github.com/ac2393921/arxiv-agent/tests/: test_storage.py
