[project]
name = "arxiv-agent"
version = "0.1.0"
description = "arXiv論文を自動収集・要約・通知するPythonアプリケーション"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=2.1.0",
    "google-genai>=1.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "responses>=0.24.0",
]

[project.scripts]
arxiv-agent = "arxiv_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
